--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,33 +3,32 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="tubone24">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>Welcome to <span class="text-gradient">tubone project</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			Astro test project made by tubone
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				href="https://blog.tubone-project24.xyz/"
+				title="tubone BOYAKI"
+				body="My Blog made by Gatsby.js"
 			/>
 			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				href="https://portfolio.tubone-project24.xyz/"
+				title="My Portfolio"
+				body="My Portfolio site"
 			/>
 			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				href="https://tubone24.github.io/boyakifm/"
+				title="BOYAKI FM"
+				body="My Portfolio site"
 			/>
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="https://twitter.com/meitante1conan"
+				title="Twitter"
+				body="Twitter"
 			/>
 		</ul>
 	</main>
