--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,30 +5,34 @@ import Card from '../components/Card.astro';
 
 <Layout title="tubone24">
 	<main>
-		<h1>Welcome to <span class="text-gradient">tubone project</span></h1>
+		<h1><span class="text-gradient">Yu Otsubo</span></h1>
 		<p class="instructions">
-			Astro test project made by tubone
+			<strong>Full Cycle Engineer</strong>
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://blog.tubone-project24.xyz/"
 				title="tubone BOYAKI"
 				body="My Blog made by Gatsby.js"
+				icon="mdi:account"
 			/>
 			<Card
 				href="https://portfolio.tubone-project24.xyz/"
 				title="My Portfolio"
 				body="My Portfolio site"
+				icon="mdi:account"
 			/>
 			<Card
 				href="https://tubone24.github.io/boyakifm/"
 				title="BOYAKI FM"
 				body="My Portfolio site"
+				icon="mdi:account"
 			/>
 			<Card
 				href="https://twitter.com/meitante1conan"
 				title="Twitter"
 				body="Twitter"
+				icon="mdi:twitter"
 			/>
 		</ul>
 	</main>
