--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
+		--accent-second: 24, 158, 137;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #6FD740 30%, white 60%);
 	}
 	html {
