--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ import Card from '../components/Card.astro';
 			<Card
 				href="https://blog.tubone-project24.xyz/"
 				title="tubone BOYAKI"
-				body="My Blog made by Gatsby.js"
-				icon="mdi:account"
+				body="A blog that provides information on IT technology"
+				icon="icomoon-free:blog"
 			/>
 			<Card
 				href="https://portfolio.tubone-project24.xyz/"
@@ -27,16 +27,28 @@ import Card from '../components/Card.astro';
 				icon="mdi:account"
 			/>
 			<Card
+				href="https://tubone24.github.io/resume/"
+				title="CV (Resume)"
+				body="This is a resume (CV) summarizing my background"
+				icon="mdi:resume"
+			/>
+			<Card
 				href="https://tubone24.github.io/boyakifm/"
 				title="BOYAKI FM"
-				body="My Portfolio site"
-				icon="mdi:account"
+				body="This is a radio site about technology and music"
+				icon="mdi:radio-fm"
 			/>
 			<Card
 				href="https://twitter.com/meitante1conan"
 				title="Twitter"
 				body="Twitter"
 				icon="mdi:twitter"
+			/>
+			<Card
+				href="https://github.com/tubone24"
+				title="GitHub"
+				body="GitHub"
+				icon="mdi:github"
 			/>
 		</ul>
 	</main>
