--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,19 +2,23 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import { Modal } from 'accessible-astro-components';
+import { Icon } from 'astro-icon';
 ---
 
 <Layout title="tubone24">
 	<main>
 	    <div class="header-container">
-		  <h1><span class="text-gradient">Yu Otsubo</span></h1>
+	      <h1><span class="text-gradient">Yu Otsubo</span></h1>
 		  <img class="myicon" src="/icon.png" alt="my icon" />
 		</div>
 		<p class="instructions">
 			<strong>Full Cycle Engineer</strong><br />
 			<strong class="second">Guitarist / Composer</strong>
 		</p>
-		<button class="cool-button" id="open-qr">Open My QR Code</button>
+		<div class="contact">
+		    <button class="cool-button" id="open-qr"><Icon class="icon" name="ic:sharp-qr-code-2" />Open My QR Code</button>
+            <a class="cool-button2" href="/contact.vcf" download><Icon class="icon" name="ic:baseline-mail" />Download Contact</a>
+		</div>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://blog.tubone-project24.xyz/"
@@ -121,19 +125,39 @@ import { Modal } from 'accessible-astro-components';
         align-items: center;
     }
 
+    .header-container .icon {
+       margin-right: 10px;
+       width: 19px;
+       margin-right: 10px;
+       vertical-align: middle;
+    }
+
+    .header-container a {
+      margin-left: 10px;
+    }
+
     .header-container img {
         width: 20%;
         object-fit:cover;
+    }
+
+	.contact {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        align-items: center;
     }
 
     .qr {
       align-self: center;
     }
     .cool-button {
-      display: inline-block;
+      display: block;
+      margin: 0 10px;
       background-image: linear-gradient(45deg, rgb(var(--accent)), #6FD740 30%, rgba(var(--accent), 40%));
       color: #fff;
       text-align: center;
+
       text-decoration: none;
       padding: 8px 16px;
       border-radius: 4px;
@@ -143,5 +167,34 @@ import { Modal } from 'accessible-astro-components';
 
     .cool-button:hover {
        background-color: rgba(var(--accent), 12%);
+    }
+    .cool-button .icon {
+       margin-right: 10px;
+       width: 19px;
+       margin-right: 10px;
+       vertical-align: middle;
+    }
+    .cool-button2 {
+      display: block;
+      margin: 0 10px;
+      background-image: linear-gradient(45deg, rgb(var(--accent)), #6FD740 80%, rgba(var(--accent), 20%));
+      color: #fff;
+      text-align: center;
+
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+
+    .cool-button2:hover {
+       background-color: rgba(var(--accent), 12%);
+    }
+    .cool-button2 .icon {
+       margin-right: 10px;
+       width: 19px;
+       margin-right: 10px;
+       vertical-align: middle;
     }
 </style>
