--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,15 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+　　　　　<meta property="og:title" content={title}>
+　　　　　<meta property="og:description" content="Yu Otsubo - Business Card Site">
+　　　　　<meta property="og:type" content="website">
+　　　　　<meta property="og:url" content="https://tubone-project24.onrender.com/">
+　　　　　<meta property="og:image" content="https://tubone-project24.onrender.com/ogp.png">
+　　　　　<meta property="og:site_name" content="Yu Otsubo - Business Card Site">
+　　　　　<meta property="og:locale" content="ja_JP">
+　　　　　<meta name="twitter:card" content="summary_large_image">
+　　　　　<meta name="twitter:site" content="@meitante1conan">
 	</head>
 	<body>
 		<slot />
