--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="robots" content="noindex, nofollow" />
 		<title>{title}</title>
 　　　　　<meta property="og:title" content={title}>
 　　　　　<meta property="og:description" content="Yu Otsubo - Business Card Site">
