--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import { Icon } from 'astro-icon';
 		  <img class="myicon" src="/icon.png" alt="my icon" />
 		</div>
 		<p class="instructions">
-			<strong>Full Cycle Engineer</strong><br />
-			<strong class="second">Guitarist / Composer</strong>
+			<strong>Full Cycle Engineer</strong>@<strong class="second"><a href="https://kddi-agile.com/">KDDI Agile Development Center</a></strong><br />
+			<strong class="second">Guitarist / Composer / YouTuber</strong>
 		</p>
 		<div class="contact">
 		    <button class="cool-button" id="open-qr"><Icon class="icon" name="ic:sharp-qr-code-2" />Open My QR Code</button>
@@ -47,14 +47,38 @@ import { Icon } from 'astro-icon';
 			<Card
 				href="https://twitter.com/meitante1conan"
 				title="Twitter"
-				body="Twitter"
+				body="Not tweeting much useful stuff"
 				icon="mdi:twitter"
 			/>
 			<Card
 				href="https://github.com/tubone24"
 				title="GitHub"
-				body="GitHub"
+				body="My GitHub"
 				icon="mdi:github"
+			/>
+			<Card
+				href="https://716.pages.dev/"
+				title="Facebook"
+				body="Facebook"
+				icon="mdi:facebook"
+			/>
+			<Card
+				href="https://716.pages.dev/"
+				title="vTuber ch"
+				body="716 doremi ch"
+				icon="mdi:youtube"
+			/>
+			<Card
+				href="https://kddi-agile.com/"
+				title="KDDI Agile Development Center"
+				body="KAG corp site"
+				icon="ic:outline-corporate-fare"
+			/>
+			<Card
+				href="https://michibiku.co.jp/"
+				title="michibiku"
+				body="michibiku corp site"
+				icon="ic:outline-corporate-fare"
 			/>
 		</ul>
         <Modal
