--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,9 @@ import { Icon } from 'astro-icon';
 		</div>
 		<p class="instructions">
 			<strong>Full Cycle Engineer</strong>@<strong class="second"><a href="https://kddi-agile.com/">KDDI Agile Development Center</a></strong><br />
-			<strong class="second">Guitarist / Composer / YouTuber</strong>
+			<strong class="second">Guitarist / Composer / YouTuber</strong><br /><br />
+			<code>TEL: 080-6367-9825</code><br />
+			<code>EMAIL: <a href="mailto:yu-ootsubo@kddi-agile.com">yu-ootsubo@kddi-agile.com</a> / <a href="mailto:tubo.yyyuuu@gmail.com">tubo.yyyuuu@gmail.com</a></code>
 		</p>
 		<div class="contact">
 		    <button class="cool-button" id="open-qr"><Icon class="icon" name="ic:sharp-qr-code-2" />Open My QR Code</button>
@@ -57,7 +59,7 @@ import { Icon } from 'astro-icon';
 				icon="mdi:github"
 			/>
 			<Card
-				href="https://716.pages.dev/"
+				href="https://www.facebook.com/yu.otsubo/"
 				title="Facebook"
 				body="Facebook"
 				icon="mdi:facebook"
@@ -174,6 +176,7 @@ import { Icon } from 'astro-icon';
 
     .qr {
       align-self: center;
+	  width: 100%;
     }
     .cool-button {
       display: block;
