--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,11 +189,13 @@ import { Icon } from 'astro-icon';
 
     .qr {
       align-self: center;
+	  max-width: 400px;
 	  width: 100%;
     }
 
 	.nft {
 		align-self: center;
+		text-align: center;
 		width: 100%;
 	}
 
