--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props;
 	<head>
 	    <meta charset="UTF-8" />
 	    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=no">
-	    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 	    <meta name="generator" content={Astro.generator} />
 	    <meta name="robots" content="noindex, nofollow" />
 	    <title>{title}</title>
