--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,10 +122,7 @@ if (!Astro.url.href.includes('localhost')) {
 </Layout>
 
 <script>
-	const toast = document.querySelector('.toast');
-	setTimeout(() => {
-		toast.classList.add('toast-hidden');
-	}, 3000);
+
 </script>
 
 <style>
@@ -231,6 +228,43 @@ if (!Astro.url.href.includes('localhost')) {
 		pointer-events: none;
 		max-width: 400px;
 		width: 100%;
+	}
+
+	@keyframes sparkle {
+		0% {
+			background-position: 0% 50%;
+		}
+		50% {
+			background-position: 100% 50%;
+		}
+		100% {
+			background-position: 0% 50%;
+		}
+	}
+
+	.cool-button, .cool-button2, .cool-button3 {
+		position: relative;
+		overflow: hidden;
+		z-index: 1;
+	}
+
+	.cool-button::before, .cool-button2::before, .cool-button3::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: linear-gradient(120deg, rgba(255,255,255,0) 0%, rgba(36, 224, 142, 0.8) 50%, rgba(255,255,255,0) 100%);
+		z-index: -1;
+		opacity: 0;
+		transition: opacity 0.5s;
+		background-size: 200% auto;
+	}
+
+	.cool-button:hover::before, .cool-button2:hover::before, .cool-button3:hover::before {
+		opacity: 1;
+		animation: sparkle 1.5s linear infinite;
 	}
 
     .cool-button {
