--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,8 @@ if (!Astro.url.href.includes('localhost')) {
 			<strong>Full Cycle Engineer</strong>@<strong class="second"><a href="https://kddi-agile.com/">KDDI Agile Development Center</a></strong><br />
 			<strong class="second">Guitarist / Composer / YouTuber</strong><br /><br />
 			<code><a href="tel:080-6367-9825"><Icon class="icon" name="mdi:telephone" />080-6367-9825</a></code>
-			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:yu-ootsubo@kddi-agile.com">yu-ootsubo@kddi-agile.com</a>&nbsp;/&nbsp;<a href="mailto:tubo.yyyuuu@gmail.com">tubo.yyyuuu@gmail.com</a></code>
+			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:yu-ootsubo@kddi-agile.com">yu-ootsubo@kddi-agile.com</a></code>
+			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:tubo.yyyuuu@gmail.com">tubo.yyyuuu@gmail.com</a></code>
 		</p>
 		<div class="contact">
 		    <button class="cool-button" id="open-qr"><Icon class="icon" name="ic:sharp-qr-code-2" />Open My QR Code</button>
