✨ feat(src/pages/index.astro): スライドとプレゼンテーション用のカードを追加しました。

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,6 +53,12 @@ statusIsOk = prairieCardResponse.status < 400;
 				icon="mdi:resume"
 			/>
 			<Card
+				href="https://slide-tubone24.pages.dev/"
+				title="Slides"
+				body="Slides from LT and presentations"
+				icon="mdi:presentation"
+			/>
+			<Card
 				href="https://tubone24.github.io/boyakifm/"
 				title="BOYAKI FM"
 				body="This is a radio site about technology and music"
