--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ statusIsOk = prairieCardResponse.status < 400;
 				icon="mdi:radio-fm"
 			/>
 			<Card
-				href="https://twitter.com/meitante1conan"
+				href="https://twitter.com/tubone24"
 				title="Twitter"
 				body="Not tweeting much useful stuff"
 				icon="mdi:twitter"
