--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props;
         <meta property="og:site_name" content="Yu Otsubo - Business Card Site">
         <meta property="og:locale" content="ja_JP">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@meitante1conan">
+        <meta name="twitter:site" content="@tubone24">
         <script
           type="text/partytown"
           src="https://www.googletagmanager.com/gtag/js?id=G-FRVDK24109">
