fix: update email address in contact.vcf and index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,6 @@ statusIsOk = prairieCardResponse.status < 400;
 ---
 
 <Layout title="tubone24">
-	<!--トーストの実装-->
 	{statusIsOk && <div class="toast">Success sending history to Prairie Card!!!</div>}
 	{!statusIsOk && <div class="toast-failed">Failed sending history to Prairie Card!!!</div>}
 	<main>
@@ -25,7 +24,7 @@ statusIsOk = prairieCardResponse.status < 400;
 			<strong>Full Cycle Engineer</strong>@<strong class="second"><a href="https://kddi-agile.com/">KDDI Agile Development Center</a></strong><br />
 			<strong class="second">Guitarist / Composer / YouTuber</strong><br /><br />
 			<code><a href="tel:080-6367-9825"><Icon class="icon" name="mdi:telephone" />080-6367-9825</a></code>
-			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:yu-ootsubo@kddi-agile.com">yu-ootsubo@kddi-agile.com</a></code>
+			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:yu-ootsubo@kddi-agdc.com">yu-ootsubo@kddi-agdc.com</a></code>
 			<code><Icon class="icon" name="ic:baseline-mail" /><a href="mailto:tubo.yyyuuu@gmail.com">tubo.yyyuuu@gmail.com</a></code>
 		</p>
 		<div class="contact">
@@ -35,7 +34,7 @@ statusIsOk = prairieCardResponse.status < 400;
 		</div>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://blog.tubone-project24.xyz/"
+				href="https://tubone-project24.xyz/"
 				title="tubone BOYAKI"
 				body="A blog that provides information on IT technology"
 				icon="icomoon-free:blog"
