--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -139,7 +139,7 @@ statusIsOk = prairieCardResponse.status < 400;
 		>
 			<a class="cool-button2 download-contact" href="/contact.vcf" download><Icon class="icon" name="ic:baseline-mail" />Save VFC</a>
 			<a class="cool-button2 download-contact" href="mailto:tubo.yyyuuu@outlook.jp?subject=%E5%90%8D%E5%88%BA%E4%BA%A4%E6%8F%9Btubone24&body=%E4%BB%B6%E5%90%8D%E3%83%BB%E6%9C%AC%E6%96%87%E3%81%AF%E3%81%9D%E3%81%AE%E3%81%BE%E3%81%BE%E3%81%AB%E3%81%97%E3%81%A6%E3%81%84%E3%81%9F%E3%81%A0%E3%81%8D%E3%83%A1%E3%83%BC%E3%83%AB%E3%82%92%E9%80%81%E4%BF%A1%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84%E3%80%82"><Icon class="icon" name="fa:mail-reply" />Auto reply mail</a>
-			<a class="download-business-card" href="/business_card.png" download><img class="business-card" src="/business_card.png" alt="Business Card" /></a>
+			<a class="download-business-card" href="/business-card.png" download><img class="business-card" src="/business-card.png" alt="Business Card" /></a>
 
 		</Modal>
 
@@ -450,7 +450,7 @@ statusIsOk = prairieCardResponse.status < 400;
 	}
 
 	.business-card {
-		max-width: 200px;
+		max-width: 400px;
 		width: 100%;
 	}
 
